Issue #21418: Fix a crash in the builtin function super() when called without argument and without current frame (ex: embedded Python).